# Easy-case-Watcher

./: .env.example  .gitignore  CLAUDE.md  OUTSTANDING_QUESTIONS.md  PROJECT_SUMMARY.md  SCALABILITY_PLAN.md  alembic.ini  docker-compose.yml  pyproject.toml  source_registry.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phase-02/: IMPLEMENTATION-SUMMARY.md  PLAN-REVISED.md  PLAN.md  REQUIREMENTS.md  REVIEW.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
agents/: danielle.py  enhanced_agents.py  pete.py  randy.py  vern.py  workflow.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
planning/phase-03/: IMPLEMENTATION-SUMMARY.md  PLAN.md  REQUIREMENTS.md  REVIEW.md
planning/phase-04/: PLAN.md  REQUIREMENTS.md
planning/phase-05/: PLAN.md  REQUIREMENTS.md
planning/phase-06/: PLAN.md  REQUIREMENTS.md
planning/phase-07/: PLAN.md  REQUIREMENTS.md
planning/phase-08/: PLAN.md
scripts/: init-test-db.sql
src/api/: main.py
src/brm/: __init__.py  auth.py  config.py  db.py  lifecycle.py  main.py  pipeline.py  run_pipeline.py  seed.py
src/models/: models.py
src/phase2/: change_deduplicator.py  html_fetcher.py  orchestrator.py  source_onboarding.py  test_phase2.py
src/phase3/: district_coverage.py  (+2 more)
tests/: conftest.py  test_ai.py  test_auth.py  test_detect.py  test_fixture_replay.py  test_lifecycle.py  test_live_integration.py  test_models.py  test_pull_api.py  test_review_api.py  test_rss_adapter.py  test_snapshot_store.py
web/: package.json  vite.config.ts
(+57 files in other folders)
